# flutter_pulseaudio_volume

./: README.md
pulseaudio_lib/: README.md  pubspec.yaml
pulseaudio_lib/example/: README.md  pubspec.yaml
pulseaudio_lib/example/lib/: main.dart
pulseaudio_lib/example/linux/: CMakeLists.txt  my_application.cc
pulseaudio_lib/example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
pulseaudio_lib/example/test/: widget_test.dart
pulseaudio_lib/lib/: generated_bindings.dart  pulseaudio_lib.dart
pulseaudio_lib/lib/models/: pulse_audio_task.dart  pulseaudio_device.dart
pulseaudio_lib/lib/utils/: array_utils.dart
pulseaudio_lib/linux/: CMakeLists.txt  pulseaudio_lib_plugin.cc  pulsetest.c  pulsetest.h
pulseaudio_lib/linux/include/pulseaudio_lib/: pulseaudio_lib_plugin.h
pulseaudio_lib/test/: pulseaudio_lib_test.dart
pulsevol/: README.md  pubspec.yaml
pulsevol/lib/: main.dart
pulsevol/linux/: CMakeLists.txt  my_application.cc
pulsevol/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
pulsevol/test/: widget_test.dart
